@@ -343,11 +343,15 @@ sub run {
                 $httpresp = $network->sendXML({message => $prologXML});
                 $prologresp = $network->getXMLResp($httpresp,'Prolog');
 
-                #Using prolog_reader hook
-                $hooks->run({name => 'prolog_reader'}, $prologresp->getRawXML());
+                if ($prologresp) {
+                  #Using prolog_reader hook
+                  $hooks->run({name => 'prolog_reader'}, $prologresp->getRawXML());
 
+                  if (!$prologresp->isInventoryAsked()) {
+                    $sendInventory = 0;
+                  }
 
-                if (!$prologresp) { # Failed to reach the server
+                } else { # Failed to reach the server
                     if ($config->{config}{lazy}) {
                         # To avoid flooding a heavy loaded server
                         my $previousPrologFreq;
@@ -364,8 +368,6 @@ sub run {
                      }
                      exit 1 unless $config->{config}{daemon};
                      $sendInventory = 0;
-                } elsif (!$prologresp->isInventoryAsked()) {
-                    $sendInventory = 0;
                 }
              }
 
